--- a/agenda_contatos/pubspec.yaml
+++ b/agenda_contatos/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   sqflite: ^1.3.1
   url_launcher: ^5.5.0
   image_picker: ^0.6.7+4
+  flutter_open_whatsapp: ^0.1.2
 
 dev_dependencies:
   flutter_test:
