--- a/introduction_mobx/pubspec.yaml
+++ b/introduction_mobx/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   mobx: ^1.1.1
   flutter_mobx: ^1.1.0
+  provider: ^4.0.4
   
 dev_dependencies:
   flutter_test:
